# ad-campaign-analytics

./: alembic.ini  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
ad_campaign_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
api_v1/users/: managers.py  models.py  services.py  views.py
backend/: .env  README.md  alembic.ini  auth.py  database.py  main.py  models.py
backend/alembic/: env.py
backend/alembic/versions/: add_sources_table.py  e1004765cca7_initial_migration.py
backend/core/: config.py
backend/core/model/: __init__.py  base.py  db_helper.py
backend/migration/: env.py
backend/migration/versions/: 1c2e7dd6256c_.py  6c325c985e7c_.py
backend/routers/: __init__.py  auth.py  sources.py  users.py
backend/routers/articles/: view.py
backend/routers/sources/: dependencies.py  schemas.py  view.py
core/: config.py
core/model/: __init__.py  db_helper.py  product.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Login.css  Login.js  ProtectedRoute.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: Dashboard.css  Dashboard.js  Login.css  Login.js  Profile.css  Profile.js  Register.css  Register.js  Reports.css  Reports.js
products/: views.py
