[project]
name = "ad-campaign-analytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "db-helper>=1.1.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.13",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "spglib>=2.6.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
[tool.setuptools]
packages = ["backend", "frontend", "alembic"]
